<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseTypeActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/wave_4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/choose_question_type"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/topicDropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="130dp"
        android:hint="@string/select_topic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <AutoCompleteTextView
            android:id="@+id/topicInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/difficultyDropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:hint="@string/select_difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topicDropdown">
        
        <AutoCompleteTextView
            android:id="@+id/difficultyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
        android:id="@+id/startButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#0000D0"
        android:gravity="center"
        android:text="@string/start"
        android:textSize="26sp"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyDropdown"
        app:cornerRadius="16dp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#414141"
        android:gravity="center"
        android:text="@string/back"
        android:textSize="24sp"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        app:cornerRadius="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>