<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/wave_4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/your_results"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalQuestions"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="Total Questions : 13"
        android:textColor="#414141"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/correctAnswers"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="Correct Questions : 9"
        android:textColor="#414141"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalQuestions" />

    <TextView
        android:id="@+id/finalScore"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="Final Score : 240"
        android:textColor="#414141"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/correctAnswers" />

    <TextView
        android:id="@+id/bestScore"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="Best Score : 1000"
        android:textColor="#414141"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finalScore" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="400dp"
        android:backgroundTint="#0000D0"
        android:gravity="center"
        android:text="@string/play_again"
        android:textSize="24sp"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:cornerRadius="16dp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#414141"
        android:gravity="center"
        android:text="@string/landing_page"
        android:textSize="20sp"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        app:cornerRadius="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>